Implement project creation logic (#5)
