# internal/pb/crowd-api-v1/crowd.api.v1.swagger.json
@@ -38,9 +38,85 @@
         ]
       }
     },
+    "/api/v1/projects": {
+      "post": {
+        "summary": "Projects\r\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////",
+        "operationId": "CrowdAPIV1_CreateProject",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1CreateProjectResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "creatorId",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "description",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "instruction",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "taskConfig",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "targetOverlap",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "tasksPerUser",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "annotatorTimeLimit",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "CrowdAPIV1"
+        ]
+      }
+    },
     "/api/v1/tasks/{projectId}/resolve_by_project": {
       "post": {
-        "summary": "Get tasks by project id. This method reserves tasks for the user.",
+        "summary": "Tasks\r\n////////////////////////////////////////////////////////////////////////////////////////////////////////////////////\r\nGet tasks by project id. This method reserves tasks for the user.",
         "operationId": "CrowdAPIV1_ResolveTasksByProject",
         "responses": {
           "200": {
@@ -107,6 +183,15 @@
         }
       }
     },
+    "v1CreateProjectResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int32"
+        }
+      }
+    },
     "v1PingResponse": {
       "type": "object"
     },
@@ -131,10 +216,6 @@
         },
         "inputData": {
           "type": "string"
-        },
-        "deadline": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     }
